Name:                codepad
Version:             0.1.1
Synopsis:            Submit and retrieve paste output from CodePad.org.
Description:         Submit and retrieve paste output from http://codepad.org/
Homepage:            http://github.com/chrisdone/codepad
License:             BSD3
License-file:        LICENSE
Author:              Chris Done
Maintainer:          Chris Done <chrisdone@gmail.com>
Copyright:           2010 Chris Done
Category:            Web
Build-type:          Simple
cabal-version: >= 1.2

Library
  Exposed-modules:   Web.Codepad
  Build-depends:     base,
                     tagsoup,
                     network <= 2.5,
                     curl,
                     mtl
  
